--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,42 @@
-*.out
+#Add files without dots in them
+*
+!/**/
+!*.*
+
 .DS_Store
+.vscode
+TempCodeRunnerFile.cpp
+
+# Format for C / C++
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
